// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Кружок c index 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  >
    1
  </p>
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail60
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок changing 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="changing"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   changing"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок default 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок modified 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="modified"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   modified"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок без буквы 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок с head 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          string"
    data-cy="head"
  >
    h
  </div>
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    >
      H
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок с react-элементом в head 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  >
    <div
      className="content "
      data-cy="circle-small"
      data-test-state="default"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head
          element"
        data-cy="head-small"
      />
      <div
        className="circle  small default"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-cy="letter-small"
        >
          h
        </p>
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
        data-cy="index"
      />
      <div
        className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
        data-cy="tail-small"
      />
    </div>
  </div>
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    >
      H
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок с react-элементом в tail 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    >
      T
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  >
    <div
      className="content "
      data-cy="circle"
      data-test-state="default"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head
          element"
        data-cy="head"
      />
      <div
        className="circle   default"
      >
        <p
          className="text text_type_circle text_color_input letter"
          data-cy="letter"
        >
          t
        </p>
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
        data-cy="index"
      />
      <div
        className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
        data-cy="tail"
      />
    </div>
  </div>
</div>
`;

exports[`Кружок с tail 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    >
      T
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          string
        "
    data-cy="tail"
  >
    t
  </div>
</div>
`;

exports[`Кружок с буквами 1`] = `
<div
  className="content "
  data-cy="circle"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head"
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter"
    >
      123
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail"
  />
</div>
`;

exports[`Кружок с пропcом isSmall ===  true 1`] = `
<div
  className="content "
  data-cy="circle-small"
  data-test-state="default"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head
          element"
    data-cy="head-small"
  />
  <div
    className="circle  small default"
  >
    <p
      className="text text_type_circle text_color_input letter"
      data-cy="letter-small"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
    data-cy="index"
  />
  <div
    className="text text_type_input text_color_input mt-4
          absolute
          tail30
          element
        "
    data-cy="tail-small"
  />
</div>
`;
